form and canvas connected to state and interacting with block

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   font-size: large;
 }
 
-input, textarea, canvas,a{
+input, textarea, canvas,a,#xPos,#yPos{
   text-align: left;
   display:block;
 }
