--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,115 @@
+html,body{
+  background-image: url(http://www.clker.com/cliparts/8/8/c/5/11949863832019937540moon-half.svg), linear-gradient(to bottom, #434265, #E76867, #FCBB9D);
+  background-repeat: no-repeat;
+  background-size: 100px 100px, auto;
+  background-blend-mode: exclusion;
+  border:none;
+}
+
+canvas{
+  border:none;
+}
 .App {
   text-align: center;
   overflow: scroll;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.App-table{
+  display: block;
 }
 
 .App-intro {
   font-size: large;
 }
 
-input, textarea, canvas,a,#xPos,#yPos{
-  text-align: left;
-  display:block;
+.App-header {
+  background:none;
+  height: 100px;
+  padding: 3px;
+  color: white;
+  border:none;
+  display:none;
+}
+
+#lock-canvas{
+  background:black;
+  min-width:200px;
+  min-height:400px;
+}
+
+#canvas{
+  width:100%;
+  height:100%;
+}
+
+
+.modal{
+  background-color: #eee;
+  color:black;
+  border-radius:7px;
+  position: relative;
+  margin:0 auto;
+  padding: 0;
+  display: block;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  height: 100%;
+}
+
+@media (min-width: 60em) {
+  .modal{
+    height: auto;
+    margin: 7% auto;
+    max-height: 56em;
+    min-height: 38em;
+    max-width: 95%;
+    width: 65%;
+    padding: 4em;
+  }
+}
+
+.form-group{
+  margin:60px auto;
+  padding:3em;
+}
+
+input{
+  margin:5px 0px;
+}
+
+.modal-overlay{
+  background: rgba(0,0,0,0.8);
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index:15;
+}
+.modal-overlay:target{
+  display: block;
+  opacity: 1;
+  pointer-events:auto;
+  z-index: 99999;
+}
+
+#lock-header{
+  text-align: center;
+}
+#form-header{
+  text-align: center;
+}
+#close-modal{
+  color:  #000;
+  font-size: 2.4em;
+  padding: 0px 10px;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  text-decoration: none;
+  top: 0;
+  z-index: 1;
+}
+#close-modal:hover{
+  color: #888;
 }
