adds form validation

--- a/src/App.css
+++ b/src/App.css
@@ -54,10 +54,16 @@ body {
   }
 }
 
-#reciept{
+#reciept, #url{
   font-size:10px;
   color:white;
   text-align: center;
+}
+
+#url > a{
+  color:blue;
+  text-shadow: 1px 1px 0px rgba(0,0,0,.1);
+
 }
 .about-body{
   font-size:18px;
@@ -136,7 +142,6 @@ form{
   transition: top 1s;
   border-radius: 7%;
   box-shadow: 1px 1px 0px rgba(0,0,0,.1);
-  user-select: none;
 }
 
 .animate-lock{
@@ -182,7 +187,8 @@ form{
 .preview-lock{
   position:fixed;
   z-index: 100;
-
+  pointer-events: none;
+  user-select: none;
 }
 
 .preview-lock-body{
@@ -231,8 +237,8 @@ form{
 }
 
 .msg-preview-container{
-  padding:15px;
-  margin-top:10px;
+  padding:11px;
+  margin-top:14px;
 }
 .msg-preview {
   height: auto;
@@ -271,7 +277,7 @@ input[type=submit] {
   margin: 34px auto 10px auto;
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover:enabled {
   box-shadow: 0 0 15px hsla(0, 0%, 100%, 1);
 }
 
@@ -434,7 +440,7 @@ input:last-child {
 
 #header{
   position: fixed;
-  top:20px;
+  top:17px;
   right:82px;
   font-size:26px;
   padding-bottom:7px;
@@ -443,17 +449,18 @@ input:last-child {
   z-index:9;
   color:#fff;
   opacity:.8;
+  user-select: none;
 }
 
 #header > img{
 
-  width:300px;
+  width:270px;
   height:auto;
 }
 
 #about-header{
-  font-size:24px;
-  padding-bottom:15px;
+  font-size:30px;
+  padding-bottom:20px;
   text-align: center;
 
   z-index:9;
