--- a/src/App.css
+++ b/src/App.css
@@ -55,24 +55,29 @@ body {
 }
 
 #receipt, #url{
-  font-size:10px;
-  color:white;
+  font-size:14px;
+  color:#fff !important;
+  text-shadow: 1px 1px 0px rgba(0,0,0,.1);
   text-align: center;
 }
 
 #url > a{
-  color:blue;
+  color:#fff;
   text-shadow: 1px 1px 0px rgba(0,0,0,.1);
-
+  font-size: 10px;
 }
 .about-body{
   font-size:18px;
   padding:15px 20px;
 }
 
+#short-title{
+  font-weight: 500;
+}
 
 .about-body > a, .web3-msg > a{
-  color:#ff00ff;
+  text-decoration: underline;
+  color:inherit;
 }
 
 
@@ -124,9 +129,9 @@ body {
 }
 
 form{
-  min-width: 450px;
-  max-width:450px;
+  width: 450px;
   min-height:350px;
+
   padding: 25px;
   margin-top:4%;
 
@@ -138,7 +143,7 @@ form{
   position: absolute;
   transition: top 1s;
   border-radius: 7%;
-  box-shadow: 1px 1px 0px rgba(0,0,0,.1);
+  box-shadow: 3px 3px 10px 3px rgba(0,0,0,.3);
 }
 
 .animate-lock{
@@ -147,13 +152,13 @@ form{
 }
 
 .lock-bar {
-  height: 350px; width: 320px;
+  height: 320px; width: 310px;
   position: absolute;
   top: -250px;
-  left: 41.5%;
+  left: 42.5%;
   transform: rotateY(180deg);
   margin-left: -125px;
-  border: 52px #bbb solid;
+  border: 48px #bbb solid;
   border-bottom: none;
   border-radius: 150px;
   border-bottom-left-radius: 0;
@@ -184,8 +189,8 @@ form{
 .preview-lock{
   position:fixed;
   z-index: 100;
-  pointer-events: none;
   user-select: none;
+  pointer-events: none;
 }
 
 .preview-lock-body{
@@ -195,130 +200,166 @@ form{
   height:200px;
 }
 
+.name-preview-container{
+  background:rgba(255,255,255,.5);
+  border-radius: 7px;
+  width:85%;
+  margin: 20px auto 0px auto;
+  padding:0px 8px 2px 8px;
 
+}
 .name-preview {
-  width:47.2%;
-  display:inline;
-  font: 20px sans-serif;
+  width:40%;
+  display:inline-block;
+  font-size: 20px;
   text-align: center;
-  color: #eee;
-  text-shadow: 1px 1px 1px rgba(0,0,0,.4);
   overflow-wrap: break-word;
 }
 
 .name-preview-big {
   width:100%;
+  padding:5px 0px 5px 0px;
   display:block;
-  font: 14px sans-serif;
+  height:18px;
+  font-size: 13.2px;
+  line-height: 8px;
   text-align: center;
-  color: #eee;
-  text-shadow: 1px 1px 1px rgba(0,0,0,.4);
   overflow-wrap: break-word;
 }
 
 
 .lovers-cross{
-  padding:7px;
+  padding:0px 3px 0px 3px;
   color:#ffffff;
+  font-size: 28px;
+  font-weight:100;
   display: inline-block;
-  text-shadow: 1px 1px 1px rgba(0,0,0,.4);
+  text-shadow: 1px 1px 0px rgba(0,0,0,.1);
 }
 
 .lovers-cross-big{
   padding:0px;
+  line-height: 22px;
   width:100%;
+  font-size: 28px;
+  font-weight:100;
   text-align: center;
   display: block;
-  color:#ff0000;
-  text-shadow: 1px 1px 1px rgba(0,0,0,.4);
+  color:#ffffff;
+  text-shadow: 1px 1px 0px rgba(0,0,0,.15);
+
 }
+
+.lock-coords{
+  float: right;
+  margin:0px 19\px 0px 0px;
+  font-size: 13px;
+  color:#ddd;
+}
+
 
 .msg-preview-container{
-  padding:11px;
-  margin-top:12px;
+  padding:5px 11px 3px 11px;
+  margin-top:8px;
+  width:100%;
 }
 .msg-preview {
-  height: auto;
-  width: 100%;
+  width: 93%;
+  height:94px;
   display: block;
   margin: auto;
-  margin-bottom: 20px;
   margin-top: 0px;
-  font: 14px sans-serif;
-  text-align: center;
-  color: #eee;
-  text-shadow: 1px 1px 1px rgba(0,0,0,.4);
-  padding:12px 15px;
+  font-size: 16px;
+  text-align: left;
+  padding:4px 14px 14px 14px;
   overflow-wrap: break-word;
+  overflow: scroll;
   border-radius: 7px;
-  background-color: hsla(0, 0%, 0%, .1);
-  box-shadow: 0 0 7px hsla(0, 0%, 0%, .0) inset;
+  background:rgba(255,255,255,.5);
+}
 
+.msg-preview-big{
+
+  width: 93%;
+  height:94px;
+  display: block;
+  margin: auto;
+  margin-top: 0px;
+  font-size: 13px;
+  text-align: left;
+  padding:12px 8px 12px 10px;
+  overflow-wrap: break-word;
+  overflow: scroll;
+  border-radius: 7px;
+  background:rgba(255,255,255,.5);
+  line-height:16px;
 }
 
 
-input {
+input,textarea {
   height: 50px;
   display: block;
-  font: 18px sans-serif;
+  border-radius: 7px;
+  font-size: 18px;
   outline: 0;
   border: none;
-  background-color: hsla(0, 0%, 5%, .3);
-  box-shadow: 0 0 7px hsla(0, 0%, 5%, .1) inset;
+  border-radius: 7px;
+  background-color: rgba(255,255,255,.55);
 }
 
 input[type=submit] {
   cursor: pointer;
-  width: 75%;
-  background-color: hsla(0, 0%, 5%, .5);
-  margin: 34px auto 10px auto;
+  width: 60%;
+  background-color: rgba(240,240,240,1);
+  margin: 26px auto 10px auto;
 }
 
 input[type=submit]:hover:enabled {
-  box-shadow: 0 0 15px hsla(0, 0%, 100%, 1);
-  background-color: hsla(0, 0%, 5%, .6);
+  background-color: rgba(255,255,255,1);
+  color:#333;
+
 }
 
 input[type=submit]:disabled {
-  background-color: hsla(0, 0%, 5%, .4);
+  background-color: rgba(245,245,245,.3);
+  color:#666;
+}
+
+.engraving:disabled{
+  background-color: rgba(245,245,245,0)!important;
+  color:#fff !important;
+  text-shadow: 1px 1px 0px rgba(0,0,0,.1);
+  font-size: 20px;
 }
 
 
 .name-input{
   text-align: center;
-  width:47.2%;
+  width:47.1%;
   display:inline;
-}
-
-.name-input,#message, #submit-form{
-  color: #eee;
-  text-shadow: 1px 1px 1px rgba(0,0,0,.4);
-  border-radius: 7px;
   padding: 15px;
 }
 
+.name-input,#message{
+  color: #333;
+}
+
 .name-input::placeholder,#message::placeholder {
-  color:  rgba(200,200,200,.6) !important;
-  text-shadow: 1px 1px 1px rgba(0,0,0,.4);
+  color:#666 !important;
 }
 
 textarea {
-  height: 70px;
+  height: 85px;
   width: 100%;
   display: block;
   margin: 14px auto;
   margin-bottom:20px;
-  font: 18px sans-serif;
+  font-size: 18px;
   /*text-align: center;*/
   outline: 0;
   border: none;
-  border-radius: 7px;
-  background-color: hsla(0, 0%, 5%, .3);
-  box-shadow: 0 0 7px hsla(0, 0%, 5%, .0) inset;
-  color: #eee;
-  text-shadow: 1px 1px 1px rgba(0,0,0,.4);
-  padding:5px;
-  padding-left: 12px;
+  color: #333;
+  padding:5px 12px 5px 12px;
   resize:none;
 }
 
@@ -353,10 +394,14 @@ input:last-child {
   height: 100%;
 }
 
+.instructions{
+  padding: 0px 30px 0px 30px;
+  color:#521d6d;
+}
 .about-modal{
-  background-color: #eee;
+  background-color: rgba(255,255,255,.82);
   color:black;
-  /*border-radius:10px;*/
+  border-radius:7px;
   position: relative;
   /*margin:0 auto;
   padding: 10em;*/
@@ -551,7 +596,7 @@ input:last-child {
   font-weight:200;
   text-align: center;
   text-decoration: none;
-  top: -200px;
+  top: -150px;
   z-index: 1;
 }
 #close-form:hover{
@@ -563,11 +608,11 @@ input:last-child {
   font-size: 3.4em;
   padding: 0px 10px;
   position: absolute;
-  right: 2px;
+  right: 5px;
   font-weight:200;
   text-align: center;
   text-decoration: none;
-  top: 0px;
+  top: -10px;
   z-index: 1;
 }
 #close-about:hover{
