--- a/src/App.css
+++ b/src/App.css
@@ -238,8 +238,8 @@ form{
 }
 
 .lovers-cross-big{
-  padding:0px;
-  line-height: 22px;
+  padding-bottom:3px;
+  line-height: 17px;
   width:100%;
   font-size: 28px;
   font-weight:100;
