--- a/src/App.css
+++ b/src/App.css
@@ -394,6 +394,7 @@ input:last-child {
   height: 100%;
 }
 
+
 .instructions{
   padding: 0px 30px 0px 30px;
   color:#521d6d;
@@ -409,13 +410,27 @@ input:last-child {
   /*overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   height: 100%;*/
-  height: auto;
   margin: 7% auto;
-  max-height: 56em;
-  min-height: 38em;
+  height: 40em;
   width:750px;
   padding: 3em;
 }
+
+
+@media (max-width: 52em) {
+
+  .about-modal{
+    position: relative;
+    margin:0 auto;
+    padding: 2.5em;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    height: 100%;
+    width:100%;
+  }
+
+}
+
 
 @media (min-width: 60em) {
   .about-modal{
